compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_non_breaking_space.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2222
expression: "pub fn main() { let x = 1\n  x }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { let x = 1
  x }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:20
  │
1 │ pub fn main() { let x = 1
  │                    ^ Unexpected character

This looks like ascii space, but it is actually the unicode non-breaking
space.
